Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3410,7 +3410,7 @@ input, select, textarea {
 #skills {
     max-width: 900px;
     margin: 50px auto;
-    padding: 20px;
+    padding: 10px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -3433,7 +3433,7 @@ input, select, textarea {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-	gap: 20px;
+	gap: 10px;
 }
 
 .skill {
